--- a/index.html
+++ b/index.html
@@ -104,50 +104,50 @@
         </div>
         <div class="modal-body gallery-body">
           <div class="gallery-grid">
-            <div class="gallery-item" onclick="openImageLightbox('gallery/1.jpg')">
-              <img src="gallery/1.jpg" alt="Gallery Image 1" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/1.jpg')">
+              <img src="./gallery/1.jpg" alt="Gallery Image 1" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/2.jpg')">
-              <img src="gallery/2.jpg" alt="Gallery Image 2" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/2.jpg')">
+              <img src="./gallery/2.jpg" alt="Gallery Image 2" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/3.jpg')">
-              <img src="gallery/3.jpg" alt="Gallery Image 3" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/3.jpg')">
+              <img src="./gallery/3.jpg" alt="Gallery Image 3" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/4.jpg')">
-              <img src="gallery/4.jpg" alt="Gallery Image 4" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/4.jpg')">
+              <img src="./gallery/4.jpg" alt="Gallery Image 4" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/5.jpg')">
-              <img src="gallery/5.jpg" alt="Gallery Image 5" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/5.jpg')">
+              <img src="./gallery/5.jpg" alt="Gallery Image 5" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/6.jpg')">
-              <img src="gallery/6.jpg" alt="Gallery Image 6" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/6.jpg')">
+              <img src="./gallery/6.jpg" alt="Gallery Image 6" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/7.jpg')">
-              <img src="gallery/7.jpg" alt="Gallery Image 7" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/7.jpg')">
+              <img src="./gallery/7.jpg" alt="Gallery Image 7" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/8.jpg')">
-              <img src="gallery/8.jpg" alt="Gallery Image 8" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/8.jpg')">
+              <img src="./gallery/8.jpg" alt="Gallery Image 8" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/9.jpg')">
-              <img src="gallery/9.jpg" alt="Gallery Image 9" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/9.jpg')">
+              <img src="./gallery/9.jpg" alt="Gallery Image 9" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/10.jpg')">
-              <img src="gallery/10.jpg" alt="Gallery Image 10" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/10.jpg')">
+              <img src="./gallery/10.jpg" alt="Gallery Image 10" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/11.jpg')">
-              <img src="gallery/11.jpg" alt="Gallery Image 11" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/11.jpg')">
+              <img src="./gallery/11.jpg" alt="Gallery Image 11" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/12.jpg')">
-              <img src="gallery/12.jpg" alt="Gallery Image 12" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/12.jpg')">
+              <img src="./gallery/12.jpg" alt="Gallery Image 12" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/14.jpg')">
-              <img src="gallery/14.jpg" alt="Gallery Image 14" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/14.jpg')">
+              <img src="./gallery/14.jpg" alt="Gallery Image 14" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/15.jpg')">
-              <img src="gallery/15.jpg" alt="Gallery Image 15" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/15.jpg')">
+              <img src="./gallery/15.jpg" alt="Gallery Image 15" loading="lazy">
             </div>
-            <div class="gallery-item" onclick="openImageLightbox('gallery/16.jpg')">
-              <img src="gallery/16.jpg" alt="Gallery Image 16" loading="lazy">
+            <div class="gallery-item" onclick="openImageLightbox('./gallery/16.jpg')">
+              <img src="./gallery/16.jpg" alt="Gallery Image 16" loading="lazy">
             </div>
           </div>
         </div>
