next match update

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
           <div class="announcements-content">
             <p style="margin-bottom: 1rem;"><strong>🟢 تمرين الاربع: فتح التسجيل يوم الاحد الساعه ٩ مساء</strong></p>
             <p style="margin-bottom: 1rem;"><strong>🟢 تمرين الاحد: فتح التسجيل يوم الخميس الساعه ٩ مساء</strong></p>
-            <p style="margin-bottom: 1rem;"><strong>⛔️ اي زول يسجل لي روحو ( يستثنى الضيوف والمابتكلمو عربي)</strong></p>
             <p style="margin-bottom: 1rem;"><strong>🟢ياريت الشباب يلتزمو بالشير بعد التمرين مباشره</p>
             <p style="margin-bottom: 1rem;"><strong>🟢اي زول فيكم ممكن يفتح التمرين في الزمن المحدد (ماف شخص محدد)</p>
           </div>
@@ -183,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">Striker</h1>
+          <h1 class="match-title">ASV</h1>
           <div class="match-details">
-            <span class="time">Sun 02/11 02:20 PM</span>
+            <span class="time">Wed 05/11 09:30 PM</span>
           </div>
         </div>
 
@@ -201,27 +200,39 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">جوهر</div>
+              <div class="player-name">مهند</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">عصام</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
-              <div class="player-name">وائل</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">4</div>
-              <div class="player-name">انور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
               <div class="player-name">انس</div>
             </div>
             <div class="player-card">
+              <div class="player-number">3</div>
+              <div class="player-name">ابو القاسم</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">4</div>
+              <div class="player-name">حسام</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">5</div>
+              <div class="player-name">سلمان</div>
+            </div>
+            <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name"> احمد</div>
+              <div class="player-name">بطوطه</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name">جوهر</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name">حردلو</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">9</div>
+              <div class="player-name">رزقه | احمد</div>
             </div>
           </div>
         </div>
@@ -237,27 +248,39 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name"> هيثم</div>
+              <div class="player-name">ابراهيم</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">حردلو</div>
+              <div class="player-name">جرافي</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">رياني</div>
+              <div class="player-name">وائل</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">عباده</div>
+              <div class="player-name">محمد عوض</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">محمود</div>
+              <div class="player-name">جاتسن</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه </div>
+              <div class="player-name">حارث</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name">محمود</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name">عصام</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">9</div>
+              <div class="player-name">رزقه | احمد</div>
             </div>
           </div>
         </div>
@@ -274,13 +297,13 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">الرشيد</span>
+                <span class="bench-name">عبد الرحمن</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">ايهاب</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">سنده</span>
               </div>
               <div class="bench-player">
                 <span class="bench-name"></span>
@@ -295,7 +318,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">عصام</span>
+                <span class="bench-name">ابن بطوطه</span>
               </div>
             </div>
           </div>
@@ -394,17 +417,17 @@
               <td>فيصل</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr class="excluded-row">
+            <tr>
               <td>عصام</td>
-              <td><span class="status excluded"></span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>سلمان</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
+            <tr class="excluded-row">
               <td>ابن بطوطه</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status excluded"></span></td>
             </tr>
             <tr>
               <td>سليمان</td>
