--- a/previous-matches.html
+++ b/previous-matches.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="match-info">
-          <h1 class="match-title">التمارين السابقة</h1>
+          <h1 class="header-match-title">التمارين السابقة</h1>
         </div>
         <div class="logo-section">
           <div class="logo">
