--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="menu-toggle" onclick="toggleMenu()">
           <i class="fas fa-bars"></i>
         </div>
-        <div class="match-info">
+        <div class="header-match-info">
           <h1 class="page-title">التمرين</h1>
         </div>
         <div class="logo-section">
