--- a/previous-matches.html
+++ b/previous-matches.html
@@ -21,7 +21,7 @@
             <span>العودة</span>
           </a>
         </div>
-        <div class="match-info">
+        <div class="header-match-info previous-match-info">
           <h1 class="header-match-title">التمارين السابقة</h1>
         </div>
         <div class="logo-section">
