--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">بطوطه</div>
+              <div class="player-name">عبد الرحمن</div>
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
@@ -268,7 +268,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">حارث</div>
+              <div class="player-name">ابن بطوطه</div>
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
@@ -297,10 +297,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">عبد الرحمن</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">ايهاب</span>
+                <span class="bench-name"> ايهاب</span>
               </div>
               <div class="bench-player">
                 <span class="bench-name">سنده</span>
