--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">عبد الرحمن</div>
+              <div class="player-name">ابن بطوطه</div>
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
@@ -268,7 +268,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">ابن بطوطه</div>
+              <div class="player-name">ايهاب</div>
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
@@ -297,13 +297,13 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name"> ايهاب</span>
-              </div>
-              <div class="bench-player">
                 <span class="bench-name">سنده</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">حافظ</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">خالد </span>
               </div>
             </div>
           </div>
