--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">9</div>
-              <div class="player-name">رزقه | احمد</div>
+              <div class="player-name">رزقه</div>
             </div>
           </div>
         </div>
@@ -272,7 +272,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
-              <div class="player-name">محمود</div>
+              <div class="player-name">سليمان</div>
             </div>
             <div class="player-card">
               <div class="player-number">8</div>
@@ -280,7 +280,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">9</div>
-              <div class="player-name">رزقه | احمد</div>
+              <div class="player-name"> احمد</div>
             </div>
           </div>
         </div>
@@ -297,13 +297,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">سنده</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">حافظ</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">خالد </span>
+                <span class="bench-name">محمود</span>
               </div>
             </div>
           </div>
@@ -315,7 +309,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">ابن بطوطه</span>
+                <span class="bench-name">سلمان</span>
               </div>
             </div>
           </div>
