--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">ASV</h1>
+          <h1 class="match-title">Strikers</h1>
           <div class="match-details">
-            <span class="time">Wed 05/11 09:30 PM</span>
+            <span class="time">Sun 09/11 02:20 PM</span>
           </div>
         </div>
 
@@ -200,39 +200,39 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">مهند</div>
+              <div class="player-name">عباده</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">انس</div>
+              <div class="player-name">عثمان</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">ابو القاسم</div>
+              <div class="player-name">انس</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">حسام</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">سلمان</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">ابن بطوطه</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">جوهر</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
               <div class="player-name">حردلو</div>
             </div>
             <div class="player-card">
+              <div class="player-number">5</div>
+              <div class="player-name">جوهر</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">6</div>
+              <div class="player-name">رزقه | احمد</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name"></div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name"></div>
+            </div>
+            <div class="player-card">
               <div class="player-number">9</div>
-              <div class="player-name">رزقه</div>
+              <div class="player-name"></div>
             </div>
           </div>
         </div>
@@ -248,39 +248,39 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">ابراهيم</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
-              <div class="player-name">جرافي</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
               <div class="player-name">وائل</div>
             </div>
             <div class="player-card">
+              <div class="player-number">2</div>
+              <div class="player-name">وادفور</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">3</div>
+              <div class="player-name">سلمان</div>
+            </div>
+            <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">محمدعوض</div>
+              <div class="player-name">محمود</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">جاتسن</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">ايهاب</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">سليمان</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
               <div class="player-name">عصام</div>
             </div>
             <div class="player-card">
+              <div class="player-number">6</div>
+              <div class="player-name">رزقه | احمد</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name"></div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name"></div>
+            </div>
+            <div class="player-card">
               <div class="player-number">9</div>
-              <div class="player-name"> احمد</div>
+              <div class="player-name"></div>
             </div>
           </div>
         </div>
@@ -297,7 +297,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">محمود</span>
+                <span class="bench-name">حسام</span>
               </div>
             </div>
           </div>
@@ -309,7 +309,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">سلمان</span>
+                <span class="bench-name">جوهر</span>
               </div>
             </div>
           </div>
@@ -374,7 +374,7 @@
             </tr>
             <tr>
               <td>عثمان</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>محمد عوض</td>
