--- a/index.html
+++ b/index.html
@@ -184,82 +184,118 @@
         <div class="match-info">
           <h1 class="match-title">Strikers</h1>
           <div class="match-details">
-            <span class="time">Sun 09/11 02:20 PM</span>
+            <span class="time">Wen 12/11 08:40 PM</span>
           </div>
         </div>
 
         <div class="teams-grid-wrapper">
-        <!-- Red Team (Left) -->
-        <div class="team-card red-team">
-          <div class="team-header">
-            <div class="team-icon">
-              <i class="fas fa-shield-alt"></i>
+          <!-- Yellow Team -->
+          <div class="team-card yellow-team">
+            <div class="team-header">
+              <div class="team-icon">
+                <i class="fas fa-shield-alt"></i>
+              </div>
+              <h2 class="team-name">الفريق الأصفر</h2>
             </div>
-            <h2 class="team-name">الفريق الأحمر</h2>
+            <div class="players-grid">
+              <div class="player-card">
+                <div class="player-number">1</div>
+                <div class="player-name">وائل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">عباده</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">جوهر</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">جاتشن</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">فيصل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">رزقه|احمد|عثمان</div>
+              </div>
+            </div>
           </div>
-          <div class="players-grid">
-            <div class="player-card">
-              <div class="player-number">1</div>
-              <div class="player-name">عباده</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
-              <div class="player-name">عثمان</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
-              <div class="player-name">انس</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">4</div>
-              <div class="player-name">حردلو</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">جوهر</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">رزقه | احمد</div>
-            </div>
-          </div>
-        </div>
 
-        <!-- Yellow Team (Right) -->
-        <div class="team-card yellow-team">
-          <div class="team-header">
-            <div class="team-icon">
-              <i class="fas fa-shield-alt"></i>
+          <!-- Red Team -->
+          <div class="team-card red-team">
+            <div class="team-header">
+              <div class="team-icon">
+                <i class="fas fa-shield-alt"></i>
+              </div>
+              <h2 class="team-name">الفريق الأحمر</h2>
             </div>
-            <h2 class="team-name">الفريق الأصفر</h2>
+            <div class="players-grid">
+              <div class="player-card">
+                <div class="player-number">1</div>
+                <div class="player-name">سنده</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">وادفور</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">انس</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">سليمان عبدالله</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">سعيد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">رزقه|احمد|عثمان</div>
+              </div>
+            </div>
           </div>
-          <div class="players-grid">
-            <div class="player-card">
-              <div class="player-number">1</div>
-              <div class="player-name">وائل</div>
+
+          <!-- Blue Team -->
+          <div class="team-card blue-team">
+            <div class="team-header">
+              <div class="team-icon">
+                <i class="fas fa-shield-alt"></i>
+              </div>
+              <h2 class="team-name">الفريق الأزرق</h2>
             </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
-              <div class="player-name">وادفور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
-              <div class="player-name">سلمان</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">4</div>
-              <div class="player-name">محمود</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">عصام</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">رزقه | احمد</div>
+            <div class="players-grid">
+              <div class="player-card">
+                <div class="player-number">1</div>
+                <div class="player-name">حسام</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">بطوطه</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">إيهاب</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">سلمان</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">حردلو</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">رزقه|احمد|عثمان</div>
+              </div>
             </div>
           </div>
-        </div>
         </div>
       </section>
 
@@ -273,7 +309,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">حسام</span>
+                <span class="bench-name">محمود</span>
               </div>
             </div>
           </div>
@@ -285,7 +321,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جوهر</span>
+                <span class="bench-name">عباده</span>
               </div>
             </div>
           </div>
@@ -344,13 +380,13 @@
               <td>انس</td>
               <td><span class="status done">✓</span></td>
             </tr>
-            <tr>
+            <tr class="excluded-row">
               <td>عباده</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status excluded"></span></td>
             </tr>
             <tr>
               <td>عثمان</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>محمد عوض</td>
@@ -378,7 +414,7 @@
             </tr>
             <tr>
               <td>جوهر</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>فيصل</td>
@@ -390,18 +426,14 @@
             </tr>
             <tr>
               <td>سلمان</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr class="excluded-row">
-              <td>ابن بطوطه</td>
-              <td><span class="status excluded"></span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>سليمان</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>هيثم</td>
+              <td>وادفور</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
@@ -409,7 +441,7 @@
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>ابو القاسم</td>
+              <td>ابوالقاسم</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             
