--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">ايهاب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
@@ -280,7 +280,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">إيهاب</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
