--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">Strikers</h1>
+          <h1 class="match-title">تمرين الأحد 16/11</h1>
           <div class="match-details">
-            <span class="time">Wen 12/11 08:40 PM</span>
+            <span class="time">Strikers 02:20 PM</span>
           </div>
         </div>
 
@@ -200,27 +200,27 @@
             <div class="players-grid">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">وائل</div>
+                <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">عباده</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">جوهر</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">فيصل</div>
+                <div class="player-name">محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه|احمد|عثمان</div>
+                <div class="player-name">رزقه | وادفور | عثمان</div>
               </div>
             </div>
           </div>
@@ -236,27 +236,27 @@
             <div class="players-grid">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سنده</div>
+                <div class="player-name">حسام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ايهاب</div>
+                <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">انس</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">سليمان عبدالله</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">سعيد</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه|احمد|عثمان</div>
+                <div class="player-name">رزقه | وادفور | عثمان</div>
               </div>
             </div>
           </div>
@@ -272,19 +272,19 @@
             <div class="players-grid">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">حسام</div>
+                <div class="player-name">وائل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">بطوطه</div>
+                <div class="player-name">ايهاب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">سليمان عبدالله</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">سعيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
@@ -292,7 +292,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه|احمد|عثمان</div>
+                <div class="player-name">رزقه | وادفور | عثمان</div>
               </div>
             </div>
           </div>
@@ -309,7 +309,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">محمود</span>
+                <span class="bench-name">لا يوجد</span>
               </div>
             </div>
           </div>
@@ -321,7 +321,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">عباده</span>
+                <span class="bench-name">حسام</span>
               </div>
             </div>
           </div>
@@ -369,79 +369,75 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
-              <td>حسام</td>
-              <td><span class="status done">✓</span></td>
+                <td>حسام</td>
+                <td><span class="status due">!</span></td>
             </tr>
             <tr>
-              <td>وائل</td>
-              <td><span class="status done">✓</span></td>
+                <td>وائل</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>انس</td>
-              <td><span class="status done">✓</span></td>
-            </tr>
-            <tr class="excluded-row">
-              <td>عباده</td>
-              <td><span class="status excluded"></span></td>
+                <td>انس</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>عثمان</td>
-              <td><span class="status done">✓</span></td>
-            </tr>
-            <tr>
-              <td>محمد عوض</td>
+                <td>عثمان</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>رياني</td>
+                <td>محمد عوض</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>الحردلو</td>
-              <td><span class="status done">✓</span></td>
+                <td>رياني</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>احمد بشیر</td>
-              <td><span class="status done">✓</span></td>
+                <td>الحردلو</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>جرافي</td>
-              <td><span class="status done">✓</span></td>
+                <td>احمد بشیر</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>الشيخ</td>
+                <td>جرافي</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>جوهر</td>
-              <td><span class="status done">✓</span></td>
+                <td>الشيخ</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>فيصل</td>
+                <td>جوهر</td>
+                <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+                <td>فيصل</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>عصام</td>
-              <td><span class="status done">✓</span></td>
+                <td>عصام</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>سلمان</td>
-              <td><span class="status done">✓</span></td>
+                <td>سلمان</td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-              <td>سليمان</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr>
-              <td>وادفور</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr>
-              <td>ابراهيم مضوي</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr>
-              <td>ابوالقاسم</td>
+                <td>سليمان</td>
+                <td><span class="status unmarked">-</span></td>
+              </tr>
+              <tr>
+                <td>وادفور</td>
+                <td><span class="status unmarked">-</span></td>
+              </tr>
+              <tr>
+                <td>ابراهيم مضوي</td>
+                <td><span class="status unmarked">-</span></td>
+              </tr>
+              <tr>
+                <td>ابوالقاسم</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
             
