--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="players-grid">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">الشيخ</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -216,7 +216,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">محمود</div>
+                <div class="player-name">سعيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
@@ -284,11 +284,11 @@
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">سعيد</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">حردلو</div>
+                <div class="player-name">محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
