--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
+              <td>وادفور</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
                 <td>حسام</td>
                 <td><span class="status due">!</span></td>
             </tr>
@@ -426,10 +430,6 @@
             </tr>
             <tr>
                 <td>سليمان</td>
-                <td><span class="status unmarked">-</span></td>
-              </tr>
-              <tr>
-                <td>وادفور</td>
                 <td><span class="status unmarked">-</span></td>
               </tr>
               <tr>
