--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 16/11</h1>
+          <h1 class="match-title">تمرين الأحد 23/11</h1>
           <div class="match-details">
             <span class="time">Strikers 02:20 PM</span>
           </div>
         </div>
 
-        <div class="teams-grid-wrapper">
+        <div class="teams-grid-wrapper two-columns">
           <!-- Yellow Team -->
           <div class="team-card yellow-team">
             <div class="team-header">
@@ -197,30 +197,30 @@
               </div>
               <h2 class="team-name">الفريق الأصفر</h2>
             </div>
-            <div class="players-grid">
+            <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">الشيخ</div>
+                <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ابن بطوطه</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">سعيد</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | وادفور | عثمان</div>
+                <div class="player-name">رزقه | عثمان</div>
               </div>
             </div>
           </div>
@@ -233,18 +233,18 @@
               </div>
               <h2 class="team-name">الفريق الأحمر</h2>
             </div>
-            <div class="players-grid">
+            <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">حسام</div>
+                <div class="player-name">رياني</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سنده</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
@@ -252,47 +252,11 @@
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">عصام</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">رزقه | وادفور | عثمان</div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Blue Team -->
-          <div class="team-card blue-team">
-            <div class="team-header">
-              <div class="team-icon">
-                <i class="fas fa-shield-alt"></i>
-              </div>
-              <h2 class="team-name">الفريق الأزرق</h2>
-            </div>
-            <div class="players-grid">
-              <div class="player-card">
-                <div class="player-number">1</div>
-                <div class="player-name">وائل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">ايهاب</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">سليمان عبدالله</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">الرشيد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
                 <div class="player-name">محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | وادفور | عثمان</div>
+                <div class="player-name">رزقه | عثمان</div>
               </div>
             </div>
           </div>
@@ -309,7 +273,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">لا يوجد</span>
+                <span class="bench-name">ابوالقاسم</span>
               </div>
             </div>
           </div>
@@ -321,7 +285,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">حسام</span>
+                <span class="bench-name">سليمان</span>
               </div>
             </div>
           </div>
@@ -373,8 +337,12 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
-                <td>حسام</td>
-                <td><span class="status due">!</span></td>
+              <td>سليمان</td>
+              <td><span class="status due">!</span></td>
+          </tr>
+            <tr>
+              <td>حسام</td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>وائل</td>
@@ -383,6 +351,10 @@
             <tr>
                 <td>انس</td>
                 <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+                <td>فيصل</td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>عثمان</td>
@@ -416,20 +388,13 @@
                 <td>جوهر</td>
                 <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
-                <td>فيصل</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
+          
             <tr>
                 <td>عصام</td>
                 <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>سلمان</td>
-                <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr>
-                <td>سليمان</td>
                 <td><span class="status unmarked">-</span></td>
               </tr>
               <tr>
