--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 23/11</h1>
+          <h1 class="match-title">تمرين الاربع 26/11</h1>
           <div class="match-details">
-            <span class="time">Strikers 02:20 PM</span>
+            <span class="time">Strikers 08:45 PM</span>
           </div>
         </div>
 
@@ -200,27 +200,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سنده</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | عثمان</div>
+                <div class="player-name">جرافي</div>
               </div>
             </div>
           </div>
@@ -236,27 +236,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">رياني</div>
+                <div class="player-name">عبدالرحمن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ابن بطوطه</div>
+                <div class="player-name">وائل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">حسام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">محمود</div>
+                <div class="player-name">بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | عثمان</div>
+                <div class="player-name">محمود</div>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">ابوالقاسم</span>
+                <span class="bench-name">لا يوجد</span>
               </div>
             </div>
           </div>
@@ -285,7 +285,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">سليمان</span>
+                <span class="bench-name">حسام</span>
               </div>
             </div>
           </div>
@@ -338,11 +338,11 @@
             </tr>
             <tr>
               <td>سليمان</td>
-              <td><span class="status due">!</span></td>
-          </tr>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
             <tr>
               <td>حسام</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status due">!</span></td>
             </tr>
             <tr>
                 <td>وائل</td>
