--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </tr>
             <tr>
               <td>سليمان</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>حسام</td>
