--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">محمود</div>
+                <div class="player-name">عصام</div>
               </div>
             </div>
           </div>
