--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الاربعاء 13/12</h1>
+          <h1 class="match-title">03/12</h1>
           <div class="match-details">
             <span class="time">Strikers 08:45 PM</span>
           </div>
