--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الاربعاء 13/12</h1>
+          <h1 class="match-title">تمرين الاحد 07/12</h1>
           <div class="match-details">
-            <span class="time">Strikers 08:45 PM</span>
+            <span class="time">Strikers 03:25 PM</span>
           </div>
         </div>
 
@@ -204,19 +204,19 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وائل</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">حسام</div>
+                <div class="player-name">ابراهيم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">محمود</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
@@ -240,15 +240,15 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">الشيخ</div>
+                <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">ابراهيم</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
@@ -285,7 +285,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">وائل</span>
+                <span class="bench-name">عثمان</span>
               </div>
             </div>
           </div>
@@ -346,7 +346,7 @@
             </tr>
             <tr>
                 <td>وائل</td>
-                <td><span class="status due">!</span></td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>انس</td>
@@ -358,7 +358,7 @@
             </tr>
             <tr>
                 <td>عثمان</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status due">!</span></td>
             </tr>
             <tr>
                 <td>محمد عوض</td>
